<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="18dp"
                android:orientation="horizontal">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/gambarfakdel"
                    android:layout_width="119dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/logoupn" />

                <TextView
                    android:id="@+id/nama_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/nama_fakultas"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/deskrip_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:autoLink="email"
                android:text="@string/deskrip"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deksdel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="10dp"
                    android:autoLink="all"
                    android:linksClickable="false"
                    android:text="@string/textview"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ib1"
                        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ib2"
                        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ib3"
                        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ib4"
                        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ib5"
                        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>